RESOLVED FIXED62246
[chromium] RTL pages that trigger the compositor don't render correctly
https://bugs.webkit.org/show_bug.cgi?id=62246
Summary [chromium] RTL pages that trigger the compositor don't render correctly
Vangelis Kokkevis
Reported 2011-06-07 15:58:59 PDT
Chrome currently disables compositing for RTL pages (the compositor isn't quite ready for it yet) however it does it too late, after the GraphicsLayer tree has been built. As a result RLT pages don't always render correctly. For example: http://fiddle.jshell.net/CLX7V/show/light/ renders completely blank. Also tracked as crbug: http://code.google.com/p/chromium/issues/detail?id=85202
Attachments
Patch (9.31 KB, patch)
2011-06-07 16:35 PDT, Vangelis Kokkevis
jamesr: review+
Vangelis Kokkevis
Comment 1 2011-06-07 16:35:11 PDT
James Robinson
Comment 2 2011-06-07 16:36:57 PDT
Comment on attachment 96327 [details] Patch R=me
Vangelis Kokkevis
Comment 3 2011-06-07 16:59:26 PDT
Note You need to log in before you can comment on or make changes to this bug.