2011-06-07  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by James Robinson.

        Add a test to verify that RTL pages that trigger the compositor
        render correctly.
        https://bugs.webkit.org/show_bug.cgi?id=62246

        * compositing/geometry/rtl-composited-expected.png: Added.
        * compositing/geometry/rtl-composited-expected.txt: Added.
        * compositing/geometry/rtl-composited.html: Added.
2011-06-07  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by James Robinson.

        Disable compositing for RTL pages in the RenderLayerCompositor rather
        than later on in the WebViewImpl.
        https://bugs.webkit.org/show_bug.cgi?id=62246

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::allowedCompositingTriggers):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::layout):
        (WebKit::WebViewImpl::setRootGraphicsLayer):


Canonical link: https://commits.webkit.org/77723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88288 268f45cc-cd09-0410-ab3c-d52691b4dbfc